--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@bytemd/plugin-medium-zoom": "^1.10.13",
     "@bytemd/plugin-mermaid": "^1.10.13",
     "@bytemd/react": "^1.10.13",
+    "framer-motion": "^5.5.5",
     "github-markdown-css": "^5.1.0",
     "highlight.js": "^11.3.1",
     "next": "12.0.7",
