--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@bytemd/plugin-medium-zoom": "^1.10.13",
     "@bytemd/plugin-mermaid": "^1.10.13",
     "@bytemd/react": "^1.10.13",
+    "@popmotion/popcorn": "^0.4.4",
     "framer-motion": "^5.5.5",
     "github-markdown-css": "^5.1.0",
     "highlight.js": "^11.3.1",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
