--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@bytemd/plugin-mermaid": "^1.10.13",
     "@bytemd/react": "^1.10.13",
     "@popmotion/popcorn": "^0.4.4",
+    "@reduxjs/toolkit": "^1.7.1",
     "faunadb": "^4.4.1",
     "framer-motion": "^5.5.5",
     "github-markdown-css": "^5.1.0",
@@ -28,7 +29,8 @@
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
-    "react-modal": "^3.14.4"
+    "react-modal": "^3.14.4",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "eslint": "8.5.0",
