--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^5.5.5",
     "github-markdown-css": "^5.1.0",
     "highlight.js": "^11.3.1",
+    "js-cookie": "^3.0.1",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
